<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:scrollbars="vertical">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28dp"
            android:textAlignment="center"
            android:fontFamily="@font/caveat"
            android:text="@string/users_profil" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textSize="22dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/patrick_hand"
            android:text="@string/users_profil_name" />

        <EditText
            android:id="@+id/profil_name2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:textSize="22dp"
            android:textAlignment="center"
            android:fontFamily="@font/caveat"
            android:hint="@string/users_profil_name_hint" />


    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/infoForName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12dp"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/patrick_hand"
            android:text="@string/users_profil_name_reservation" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textSize="22dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/patrick_hand"
            android:text="@string/users_profil_email" />

        <TextView
            android:id="@+id/profil_email2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:textSize="20dp"
            android:textAlignment="center"
            android:fontFamily="@font/caveat" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/infoForEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12dp"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/patrick_hand"
            android:text="@string/users_profil_email_2" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textSize="22dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/patrick_hand"
            android:text="@string/users_profil_tel" />

        <EditText
            android:id="@+id/profil_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:textSize="22dp"
            android:inputType="phone"
            android:textAlignment="center"
            android:fontFamily="@font/caveat"
            android:hint="@string/users_profil_tel_format"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/infoForPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12dp"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/patrick_hand"
            android:text="@string/users_profil_tel_profil_format_2" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="22dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/patrick_hand"
            android:text="@string/users_profil_verificate" />

        <TextView
            android:id="@+id/verification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="22dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/patrick_hand" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/infoForVerificate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12dp"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/patrick_hand"
            android:text="@string/users_profil_verificate_online" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="22dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/patrick_hand"
            android:text="@string/users_profil_online_reservation" />

        <TextView
            android:id="@+id/online_reservation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="22dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/patrick_hand"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/patrick_hand"
            android:text="@string/users_profil_info_o" />


    </LinearLayout>

</LinearLayout>